--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Cinematic Video Background (z-index: -1000) -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline>
-            <source src="assets/video/bg_video.mp4" type="video/mp4">
+            <source src="assets/video/main_bg.mp4" type="video/mp4">
         </video>
         <div class="video-overlay"></div>
     </div>
@@ -175,6 +175,7 @@
     <script src="scripts/utils/version.js"></script>
     <script src="scripts/network.js"></script>
     <script src="scripts/tiktok_section.js"></script>
+    <script src="scripts/worldcup.js"></script>
     <script src="scripts/worldcup_display.js"></script>
     <script src="scripts/social_links.js"></script>
     <script src="scripts/printify_sync.js"></script>
