--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#tiktok">TikTok 5-Pack</a></li>
+                <li><a href="#content">Content</a></li>
                 <li><a href="#worldcup">World Cup</a></li>
                 <li><a href="watchthefallrecords.html">WTF Creations</a></li>
                 <li><a href="feed.html">Directory</a></li>
@@ -51,10 +51,12 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">WatchTheFall</h1>
+            <h1 class="hero-title">
+                <img src="assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-logo" />
+            </h1>
             <p class="hero-tagline">A network documenting the collapse of civilization through the lens of social media analytics.</p>
             <div class="hero-cta">
-                <a href="#tiktok" class="btn btn-primary">Explore Content</a>
+                <a href="#content" class="btn btn-primary">Contribute</a>
                 <a href="watchthefallrecords.html" class="btn btn-secondary">Shop Merch</a>
             </div>
         </div>
@@ -65,11 +67,11 @@
     </section>
 
     <!-- TikTok 5-Pack Section -->
-    <section id="tiktok" class="section tiktok-section">
+    <section id="content" class="section tiktok-section">
         <div class="container">
-            <h2 class="section-title">TikTok 5-Pack</h2>
+            <h2 class="section-title">Content</h2>
             <p class="section-subtitle">Latest viral content from the WatchTheFall network</p>
-            <div id="tiktok-grid" class="tiktok-grid">
+            <div id="tiktok-grid" class="tiktok-slider slider">
                 <!-- TikTok embeds will be loaded here via tiktok_section.js -->
             </div>
         </div>
@@ -91,7 +93,7 @@
         <div class="container">
             <h2 class="section-title">WTF Creations</h2>
             <p class="section-subtitle">Official merchandise powered by Printify</p>
-            <div id="printify-preview" class="product-grid">
+            <div id="printify-preview" class="product-slider slider">
                 <!-- Products will be loaded here via printify_sync.js -->
             </div>
             <div class="section-cta">
@@ -108,23 +110,28 @@
             <div class="region-grid">
                 <a href="regional/pages/north-america.html" class="region-card">
                     <div class="region-icon">🌎</div>
-                    <h3>North America</h3>
-                    <p>USA, Canada, Mexico</p>
+                    <h3>The West</h3>
+                    <p>USA, Canada, Australia</p>
                 </a>
                 <a href="regional/pages/europe.html" class="region-card">
                     <div class="region-icon">🌍</div>
                     <h3>Europe</h3>
-                    <p>UK, EU, Eastern Europe</p>
+                    <p>EU, Eastern Europe</p>
                 </a>
-                <a href="regional/pages/asia.html" class="region-card">
+                <a href="regional/pages/britain.html" class="region-card">
                     <div class="region-icon">🌏</div>
-                    <h3>Asia-Pacific</h3>
-                    <p>Asia, Australia, Oceania</p>
+                    <h3>Britain</h3>
+                    <p>England, Scotland, Wales, Northern Ireland</p>
                 </a>
                 <a href="regional/pages/global.html" class="region-card">
                     <div class="region-icon">🌐</div>
                     <h3>Global</h3>
-                    <p>South America, Africa, Middle East</p>
+                    <p>The rest of the world</p>
+                </a>
+                <a href="ai.html" class="region-card ai-network">
+                    <div class="region-icon">🤖</div>
+                    <h3>AI Network</h3>
+                    <p>A new frontier of synthetic creators, data hubs, and machine-led commentary</p>
                 </a>
             </div>
             <div class="section-cta">
