--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Relaxed Content Security Policy for TikTok embeds and leaderboard -->
+    <meta http-equiv="Content-Security-Policy" 
+        content="default-src 'self' https: data: blob:; 
+                 script-src 'self' 'unsafe-eval' 'unsafe-inline' https:; 
+                 connect-src *; 
+                 frame-src https://www.tiktok.com https://*.tiktokcdn.com https://*.tiktok.com; 
+                 img-src 'self' data: https:; 
+                 style-src 'self' 'unsafe-inline' https:;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WatchTheFall.wtf - Documenting Civilization's Collapse</title>
