--- a/feed.html
+++ b/feed.html
@@ -60,51 +60,68 @@
     <section class="section regions-section">
         <div class="container">
             <div class="regions-grid">
-                <a href="regional/pages/north-america.html" class="region-card-large">
+                <!-- Britain Category -->
+                <a href="regional/pages/britain-directory.html" class="region-card-large">
                     <div class="region-header">
-                        <div class="region-icon">🌎</div>
-                        <h2>North America</h2>
+                        <div class="region-icon">🇬🇧</div>
+                        <h2>Britain</h2>
                     </div>
-                    <p class="region-description">United States, Canada, Mexico</p>
+                    <p class="region-description">United Kingdom and constituent nations</p>
                     <div class="region-stats">
-                        <span class="stat">🎬 1.2M Followers</span>
-                        <span class="stat">📊 Daily Updates</span>
+                        <span class="stat">🎬 5 Hubs</span>
+                        <span class="stat">📊 4.2K Followers</span>
                     </div>
                 </a>
 
-                <a href="regional/pages/europe.html" class="region-card-large">
+                <!-- Europe Category -->
+                <a href="regional/pages/europe-directory.html" class="region-card-large">
                     <div class="region-header">
                         <div class="region-icon">🌍</div>
                         <h2>Europe</h2>
                     </div>
-                    <p class="region-description">United Kingdom, EU, Eastern Europe</p>
+                    <p class="region-description">Continental European nations</p>
                     <div class="region-stats">
-                        <span class="stat">🎬 850K Followers</span>
-                        <span class="stat">📊 Daily Updates</span>
+                        <span class="stat">🎬 8 Hubs</span>
+                        <span class="stat">📊 454 Followers</span>
                     </div>
                 </a>
 
-                <a href="regional/pages/asia.html" class="region-card-large">
+                <!-- TheWest Category -->
+                <a href="regional/pages/thewest-directory.html" class="region-card-large">
                     <div class="region-header">
-                        <div class="region-icon">🌏</div>
-                        <h2>Asia-Pacific</h2>
+                        <div class="region-icon">🌎</div>
+                        <h2>The West</h2>
                     </div>
-                    <p class="region-description">Asia, Australia, Oceania</p>
+                    <p class="region-description">Western nations and democracies</p>
                     <div class="region-stats">
-                        <span class="stat">🎬 600K Followers</span>
-                        <span class="stat">📊 Daily Updates</span>
+                        <span class="stat">🎬 4 Hubs</span>
+                        <span class="stat">📊 1.5K Followers</span>
                     </div>
                 </a>
 
-                <a href="regional/pages/global.html" class="region-card-large">
+                <!-- AI Category -->
+                <a href="regional/pages/ai-directory.html" class="region-card-large ai-glow">
+                    <div class="region-header">
+                        <div class="region-icon">🤖</div>
+                        <h2>AI & Tech</h2>
+                    </div>
+                    <p class="region-description">Artificial intelligence and technology</p>
+                    <div class="region-stats">
+                        <span class="stat">🎬 2 Hubs</span>
+                        <span class="stat">📊 35 Followers</span>
+                    </div>
+                </a>
+
+                <!-- Global Category -->
+                <a href="regional/pages/global-directory.html" class="region-card-large">
                     <div class="region-header">
                         <div class="region-icon">🌐</div>
-                        <h2>Global South</h2>
+                        <h2>Global</h2>
                     </div>
-                    <p class="region-description">South America, Africa, Middle East</p>
+                    <p class="region-description">Worldwide networks and special projects</p>
                     <div class="region-stats">
-                        <span class="stat">🎬 450K Followers</span>
-                        <span class="stat">📊 Daily Updates</span>
+                        <span class="stat">🎬 6 Hubs</span>
+                        <span class="stat">📊 800+ Followers</span>
                     </div>
                 </a>
             </div>
