Update main directory to match sub-directory layout style

--- a/feed.html
+++ b/feed.html
@@ -59,70 +59,45 @@
     <!-- Regional Grid -->
     <section class="section regions-section">
         <div class="container">
-            <div class="regions-grid">
+            <div class="hub-list-grid">
                 <!-- Britain Category -->
-                <a href="regional/pages/britain-directory.html" class="region-card-large">
-                    <div class="region-header">
-                        <div class="region-icon">🇬🇧</div>
-                        <h2>Britain</h2>
-                    </div>
-                    <p class="region-description">United Kingdom and constituent nations</p>
-                    <div class="region-stats">
-                        <span class="stat">🎬 5 Hubs</span>
-                        <span class="stat">📊 4.2K Followers</span>
-                    </div>
+                <a href="regional/pages/britain-directory.html" class="hub-card">
+                    <img src="assets/logos/britain-wtf-logo.png" alt="Britain" class="hub-logo">
+                    <h3>Britain</h3>
+                    <p>United Kingdom and constituent nations</p>
+                    <span class="hub-stat">5 Hubs</span>
                 </a>
 
                 <!-- Europe Category -->
-                <a href="regional/pages/europe-directory.html" class="region-card-large">
-                    <div class="region-header">
-                        <div class="region-icon">🌍</div>
-                        <h2>Europe</h2>
-                    </div>
-                    <p class="region-description">Continental European nations</p>
-                    <div class="region-stats">
-                        <span class="stat">🎬 8 Hubs</span>
-                        <span class="stat">📊 454 Followers</span>
-                    </div>
+                <a href="regional/pages/europe-directory.html" class="hub-card">
+                    <img src="assets/logos/europe-wtf-logo.jpg" alt="Europe" class="hub-logo">
+                    <h3>Europe</h3>
+                    <p>Continental European nations</p>
+                    <span class="hub-stat">8 Hubs</span>
                 </a>
 
-                <!-- TheWest Category -->
-                <a href="regional/pages/thewest-directory.html" class="region-card-large">
-                    <div class="region-header">
-                        <div class="region-icon">🌎</div>
-                        <h2>The West</h2>
-                    </div>
-                    <p class="region-description">Western nations and democracies</p>
-                    <div class="region-stats">
-                        <span class="stat">🎬 4 Hubs</span>
-                        <span class="stat">📊 1.5K Followers</span>
-                    </div>
+                <!-- The West Category -->
+                <a href="regional/pages/thewest-directory.html" class="hub-card">
+                    <img src="assets/logos/the-west-wtf.jpg" alt="The West" class="hub-logo">
+                    <h3>The West</h3>
+                    <p>Western nations and democracies</p>
+                    <span class="hub-stat">4 Hubs</span>
                 </a>
 
-                <!-- AI Category -->
-                <a href="regional/pages/ai-directory.html" class="region-card-large ai-glow">
-                    <div class="region-header">
-                        <div class="region-icon">🤖</div>
-                        <h2>AI & Tech</h2>
-                    </div>
-                    <p class="region-description">Artificial intelligence and technology</p>
-                    <div class="region-stats">
-                        <span class="stat">🎬 2 Hubs</span>
-                        <span class="stat">📊 35 Followers</span>
-                    </div>
+                <!-- AI & Tech Category -->
+                <a href="regional/pages/ai-directory.html" class="hub-card ai-glow">
+                    <img src="assets/logos/ai-wtf-logo.webp" alt="AI & Tech" class="hub-logo">
+                    <h3>AI & Tech</h3>
+                    <p>Artificial intelligence and technology</p>
+                    <span class="hub-stat">2 Hubs</span>
                 </a>
 
                 <!-- Global Category -->
-                <a href="regional/pages/global-directory.html" class="region-card-large">
-                    <div class="region-header">
-                        <div class="region-icon">🌐</div>
-                        <h2>Global</h2>
-                    </div>
-                    <p class="region-description">Worldwide networks and special projects</p>
-                    <div class="region-stats">
-                        <span class="stat">🎬 6 Hubs</span>
-                        <span class="stat">📊 800+ Followers</span>
-                    </div>
+                <a href="regional/pages/global-directory.html" class="hub-card">
+                    <img src="assets/watermark/wtfman.png" alt="Global" class="hub-logo">
+                    <h3>Global</h3>
+                    <p>Worldwide networks and special projects</p>
+                    <span class="hub-stat">6 Hubs</span>
                 </a>
             </div>
         </div>
