--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="#content">Content</a></li>
                 <li><a href="#worldcup">World Cup</a></li>
                 <li><a href="watchthefallrecords.html">WTF Creations</a></li>
-                <li><a href="feed.html">Directory</a></li>
+                <li><a href="#directory">Directory</a></li>
             </ul>
         </div>
     </nav>
@@ -110,40 +110,91 @@
         </div>
     </section>
 
-    <!-- Regional Directory Preview -->
-    <section class="section directory-preview">
+    <!-- Regional Directory -->
+    <section id="directory" class="section directory-section">
         <div class="container">
             <h2 class="section-title">Regional Directory</h2>
-            <p class="section-subtitle">Explore WatchTheFall hubs around the world</p>
-            <div class="region-grid">
-                <a href="regional/pages/north-america.html" class="region-card">
-                    <div class="region-icon">🌎</div>
-                    <h3>The West</h3>
-                    <p>USA, Canada, Australia</p>
-                </a>
-                <a href="regional/pages/europe.html" class="region-card">
-                    <div class="region-icon">🌍</div>
-                    <h3>Europe</h3>
-                    <p>EU, Eastern Europe</p>
-                </a>
-                <a href="regional/pages/britain.html" class="region-card">
-                    <div class="region-icon">🌏</div>
-                    <h3>Britain</h3>
-                    <p>England, Scotland, Wales, Northern Ireland</p>
-                </a>
-                <a href="regional/pages/global.html" class="region-card">
-                    <div class="region-icon">🌐</div>
-                    <h3>Global</h3>
-                    <p>The rest of the world</p>
-                </a>
-                <a href="ai.html" class="region-card ai-network">
-                    <div class="region-icon">🤖</div>
-                    <h3>AI Network</h3>
-                    <p>A new frontier of synthetic creators, data hubs, and machine-led commentary</p>
-                </a>
+            <p class="section-subtitle">Navigate to regional hubs and content networks</p>
+            
+            <div class="directory-grid">
+                <!-- Britain -->
+                <div class="directory-category">
+                    <div class="category-header">
+                        <h3>🇬🇧 Britain</h3>
+                        <a href="regional/pages/britain-directory.html" class="view-all">View All →</a>
+                    </div>
+                    <div class="hub-links">
+                        <a href="regional/pages/britain-directory.html" class="hub-link">BritainWTF</a>
+                        <a href="regional/pages/scotland.html" class="hub-link">ScotlandWTF</a>
+                        <a href="regional/pages/britain-directory.html" class="hub-link">EnglandWTF</a>
+                        <a href="regional/pages/britain-directory.html" class="hub-link">WalesWTF</a>
+                        <a href="regional/pages/britain-directory.html" class="hub-link">Northern Ireland WTF</a>
+                    </div>
+                </div>
+
+                <!-- Europe -->
+                <div class="directory-category">
+                    <div class="category-header">
+                        <h3>🌍 Europe</h3>
+                        <a href="regional/pages/europe-directory.html" class="view-all">View All →</a>
+                    </div>
+                    <div class="hub-links">
+                        <a href="regional/pages/europe-directory.html" class="hub-link">EuropeWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">IrelandWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">FranceWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">GermanyWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">NetherlandsWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">PolandWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">ItalyWTF</a>
+                        <a href="regional/pages/europe-directory.html" class="hub-link">SwedenWTF</a>
+                    </div>
+                </div>
+
+                <!-- The West -->
+                <div class="directory-category">
+                    <div class="category-header">
+                        <h3>🌎 The West</h3>
+                        <a href="regional/pages/thewest-directory.html" class="view-all">View All →</a>
+                    </div>
+                    <div class="hub-links">
+                        <a href="regional/pages/thewest-directory.html" class="hub-link">TheWestWTF</a>
+                        <a href="regional/pages/thewest-directory.html" class="hub-link">USAWTF</a>
+                        <a href="regional/pages/thewest-directory.html" class="hub-link">CanadaWTF</a>
+                        <a href="regional/pages/thewest-directory.html" class="hub-link">AustraliaWTF</a>
+                    </div>
+                </div>
+
+                <!-- AI & Tech -->
+                <div class="directory-category ai-category">
+                    <div class="category-header">
+                        <h3>🤖 AI & Tech</h3>
+                        <a href="regional/pages/ai-directory.html" class="view-all">View All →</a>
+                    </div>
+                    <div class="hub-links">
+                        <a href="ai.html" class="hub-link">AIWTF</a>
+                        <a href="ai.html" class="hub-link">AITechWTF</a>
+                    </div>
+                </div>
+
+                <!-- Global -->
+                <div class="directory-category">
+                    <div class="category-header">
+                        <h3>🌐 Global</h3>
+                        <a href="regional/pages/global-directory.html" class="view-all">View All →</a>
+                    </div>
+                    <div class="hub-links">
+                        <a href="index.html" class="hub-link">WatchTheFallWTF</a>
+                        <a href="regional/pages/global-directory.html" class="hub-link">GadgetsWTF</a>
+                        <a href="regional/pages/global-directory.html" class="hub-link">ComedyWTF</a>
+                        <a href="regional/pages/global-directory.html" class="hub-link">DarkHumourWTF</a>
+                        <a href="regional/pages/global-directory.html" class="hub-link">ConceptsWTF</a>
+                        <a href="watchthefallrecords.html" class="hub-link">WTF Records</a>
+                    </div>
+                </div>
             </div>
+
             <div class="section-cta">
-                <a href="feed.html" class="btn btn-secondary">View Full Directory</a>
+                <a href="feed.html" class="btn btn-secondary">Open Full Directory Page</a>
             </div>
         </div>
     </section>
