Convert directory pages to clean list UI (remove massive logos)

--- a/regional/pages/ai-directory.html
+++ b/regional/pages/ai-directory.html
@@ -38,24 +38,32 @@
 
     <section class="section regions-section">
         <div class="container">
-            <div class="hub-list-grid">
-                <a href="../../ai.html" class="hub-card ai-glow">
-                    <img src="../../assets/logos/ai-wtf-logo.webp" alt="AIWTF" class="hub-logo">
-                    <h3>AIWTF</h3>
-                    <p>Monitoring the rise of artificial intelligence</p>
-                    <span class="hub-stat">9 Points</span>
+            <div class="directory-list">
+                <a href="../../ai.html" class="hub-item ai-item">
+                    <div class="hub-info">
+                        <h3>AIWTF</h3>
+                        <p>Monitoring the rise of artificial intelligence</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">9 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="../../ai.html" class="hub-card ai-glow">
-                    <img src="../../assets/logos/ai-tech-wtf-logo.jpg" alt="AITechWTF" class="hub-logo">
-                    <h3>AITechWTF</h3>
-                    <p>Documenting the evolution of technology</p>
-                    <span class="hub-stat">5 Points</span>
+                <a href="../../ai.html" class="hub-item ai-item">
+                    <div class="hub-info">
+                        <h3>AITechWTF</h3>
+                        <p>Documenting the evolution of technology</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">5 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
             </div>
 
             <div class="back-link">
-                <a href="../../feed.html" class="btn-back">← Back to Directory</a>
+                <a href="../../index.html#directory" class="btn-back">← Back to Directory</a>
             </div>
         </div>
     </section>
