--- a/regional/pages/britain-directory.html
+++ b/regional/pages/britain-directory.html
@@ -38,45 +38,65 @@
 
     <section class="section regions-section">
         <div class="container">
-            <div class="hub-list-grid">
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/britain-wtf-logo.png" alt="BritainWTF" class="hub-logo">
-                    <h3>BritainWTF</h3>
-                    <p>Documenting Britain's cultural unravelling</p>
-                    <span class="hub-stat">228 Points</span>
+            <div class="directory-list">
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>BritainWTF</h3>
+                        <p>Documenting Britain's cultural unravelling</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">228 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="scotland.html" class="hub-card">
-                    <img src="../../assets/logos/scotland-wtf-logo.png" alt="ScotlandWTF" class="hub-logo">
-                    <h3>ScotlandWTF</h3>
-                    <p>Documenting the fall of Scotland</p>
-                    <span class="hub-stat">1.4K Points</span>
+                <a href="scotland.html" class="hub-item">
+                    <div class="hub-info">
+                        <h3>ScotlandWTF</h3>
+                        <p>Documenting the fall of Scotland</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">1.4K Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/england-wtf-logo.png" alt="EnglandWTF" class="hub-logo">
-                    <h3>EnglandWTF</h3>
-                    <p>Following England's decline</p>
-                    <span class="hub-stat">Coming Soon</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>EnglandWTF</h3>
+                        <p>Following England's decline</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">Coming Soon</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/wales-wtf-logo.webp" alt="WalesWTF" class="hub-logo">
-                    <h3>WalesWTF</h3>
-                    <p>Witnessing the decay of Wales</p>
-                    <span class="hub-stat">11 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>WalesWTF</h3>
+                        <p>Witnessing the decay of Wales</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">11 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/northern-ireland-wtf-logo.png" alt="Northern Ireland WTF" class="hub-logo">
-                    <h3>Northern Ireland WTF</h3>
-                    <p>Following Northern Ireland's decline</p>
-                    <span class="hub-stat">12 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>Northern Ireland WTF</h3>
+                        <p>Following Northern Ireland's decline</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">12 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
             </div>
 
             <div class="back-link">
-                <a href="../../feed.html" class="btn-back">← Back to Directory</a>
+                <a href="../../index.html#directory" class="btn-back">← Back to Directory</a>
             </div>
         </div>
     </section>
