--- a/regional/pages/europe-directory.html
+++ b/regional/pages/europe-directory.html
@@ -38,66 +38,98 @@
 
     <section class="section regions-section">
         <div class="container">
-            <div class="hub-list-grid">
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/europe-wtf-logo.jpg" alt="EuropeWTF" class="hub-logo">
-                    <h3>EuropeWTF</h3>
-                    <p>Tracking the fall across Europe</p>
-                    <span class="hub-stat">84 Points</span>
+            <div class="directory-list">
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>EuropeWTF</h3>
+                        <p>Tracking the fall across Europe</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">84 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/ireland-wtf-logo.png" alt="IrelandWTF" class="hub-logo">
-                    <h3>IrelandWTF</h3>
-                    <p>Tracking Ireland's unraveling</p>
-                    <span class="hub-stat">30 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>IrelandWTF</h3>
+                        <p>Tracking Ireland's unraveling</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">30 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/france-wtf-logo.png" alt="FranceWTF" class="hub-logo">
-                    <h3>FranceWTF</h3>
-                    <p>Observing France's ongoing crisis</p>
-                    <span class="hub-stat">6 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>FranceWTF</h3>
+                        <p>Observing France's ongoing crisis</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">6 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/germany-wtf-logo.jpg" alt="GermanyWTF" class="hub-logo">
-                    <h3>GermanyWTF</h3>
-                    <p>Monitoring the collapse of German stability</p>
-                    <span class="hub-stat">28 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>GermanyWTF</h3>
+                        <p>Monitoring the collapse of German stability</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">28 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/netherlands-wtf-logo.png" alt="NetherlandsWTF" class="hub-logo">
-                    <h3>NetherlandsWTF</h3>
-                    <p>Following the fall of Dutch sanity</p>
-                    <span class="hub-stat">11 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>NetherlandsWTF</h3>
+                        <p>Following the fall of Dutch sanity</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">11 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/poland-wtf-logo.png" alt="PolandWTF" class="hub-logo">
-                    <h3>PolandWTF</h3>
-                    <p>Tracking Poland's transformation</p>
-                    <span class="hub-stat">12 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>PolandWTF</h3>
+                        <p>Tracking Poland's transformation</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">12 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/italy-wtf-logo.png" alt="ItalyWTF" class="hub-logo">
-                    <h3>ItalyWTF</h3>
-                    <p>Recording Italy's decline</p>
-                    <span class="hub-stat">11 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>ItalyWTF</h3>
+                        <p>Recording Italy's decline</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">11 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/sweden-wtf-logo.png" alt="SwedenWTF" class="hub-logo">
-                    <h3>SwedenWTF</h3>
-                    <p>Documenting Sweden's transformation</p>
-                    <span class="hub-stat">Coming Soon</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>SwedenWTF</h3>
+                        <p>Documenting Sweden's transformation</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">Coming Soon</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
             </div>
 
             <div class="back-link">
-                <a href="../../feed.html" class="btn-back">← Back to Directory</a>
+                <a href="../../index.html#directory" class="btn-back">← Back to Directory</a>
             </div>
         </div>
     </section>
