--- a/regional/pages/global-directory.html
+++ b/regional/pages/global-directory.html
@@ -38,52 +38,76 @@
 
     <section class="section regions-section">
         <div class="container">
-            <div class="hub-list-grid">
-                <a href="../../index.html" class="hub-card">
-                    <img src="../../assets/watermark/wtfman.png" alt="WatchTheFallWTF" class="hub-logo">
-                    <h3>WatchTheFallWTF</h3>
-                    <p>The global hub of the WTF Network</p>
-                    <span class="hub-stat">228 Points</span>
+            <div class="directory-list">
+                <a href="../../index.html" class="hub-item">
+                    <div class="hub-info">
+                        <h3>WatchTheFallWTF</h3>
+                        <p>The global hub of the WTF Network</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">228 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/gadgets-wtf-logo.jpg" alt="GadgetsWTF" class="hub-logo">
-                    <h3>GadgetsWTF</h3>
-                    <p>Covering absurd, luxurious tech gadgets</p>
-                    <span class="hub-stat">10 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>GadgetsWTF</h3>
+                        <p>Covering absurd, luxurious tech gadgets</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">10 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/c0medy-wtf-logo.jpg" alt="ComedyWTF" class="hub-logo">
-                    <h3>ComedyWTF</h3>
-                    <p>Humor in the age of collapse</p>
-                    <span class="hub-stat">6 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>ComedyWTF</h3>
+                        <p>Humor in the age of collapse</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">6 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/dark-humour-wtf-logo.jpg" alt="DarkHumourWTF" class="hub-logo">
-                    <h3>DarkHumourWTF</h3>
-                    <p>Dark laughter in dystopia</p>
-                    <span class="hub-stat">6 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>DarkHumourWTF</h3>
+                        <p>Dark laughter in dystopia</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">6 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/concepts-wtf-logo.webp" alt="ConceptsWTF" class="hub-logo">
-                    <h3>ConceptsWTF</h3>
-                    <p>Exploring paradoxes, illusions, and the mind</p>
-                    <span class="hub-stat">Coming Soon</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>ConceptsWTF</h3>
+                        <p>Exploring paradoxes, illusions, and the mind</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">Coming Soon</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="../../watchthefallrecords.html" class="hub-card">
-                    <img src="../../assets/logos/wtf-records-logo.png" alt="WTF Records" class="hub-logo">
-                    <h3>WTF Records</h3>
-                    <p>Music label and creative collective</p>
-                    <span class="hub-stat">Shop</span>
+                <a href="../../watchthefallrecords.html" class="hub-item">
+                    <div class="hub-info">
+                        <h3>WTF Records</h3>
+                        <p>Music label and creative collective</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">Shop</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
             </div>
 
             <div class="back-link">
-                <a href="../../feed.html" class="btn-back">← Back to Directory</a>
+                <a href="../../index.html#directory" class="btn-back">← Back to Directory</a>
             </div>
         </div>
     </section>
