--- a/regional/pages/thewest-directory.html
+++ b/regional/pages/thewest-directory.html
@@ -38,38 +38,54 @@
 
     <section class="section regions-section">
         <div class="container">
-            <div class="hub-list-grid">
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/the-west-wtf.jpg" alt="TheWestWTF" class="hub-logo">
-                    <h3>TheWestWTF</h3>
-                    <p>Tracking the Western decline</p>
-                    <span class="hub-stat">208 Points</span>
+            <div class="directory-list">
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>TheWestWTF</h3>
+                        <p>Tracking the Western decline</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">208 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USAWTF" class="hub-logo">
-                    <h3>USAWTF</h3>
-                    <p>Documenting America's transformation</p>
-                    <span class="hub-stat">Coming Soon</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>USAWTF</h3>
+                        <p>Documenting America's transformation</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">Coming Soon</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/canada-wtf-logo.png" alt="CanadaWTF" class="hub-logo">
-                    <h3>CanadaWTF</h3>
-                    <p>Following Canada's social decay</p>
-                    <span class="hub-stat">11 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>CanadaWTF</h3>
+                        <p>Following Canada's social decay</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">11 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
 
-                <a href="#" class="hub-card">
-                    <img src="../../assets/logos/australia-wtf-logo.png" alt="AustraliaWTF" class="hub-logo">
-                    <h3>AustraliaWTF</h3>
-                    <p>Watching Australia's unraveling</p>
-                    <span class="hub-stat">298 Points</span>
+                <a href="#" class="hub-item">
+                    <div class="hub-info">
+                        <h3>AustraliaWTF</h3>
+                        <p>Watching Australia's unraveling</p>
+                    </div>
+                    <div class="hub-meta">
+                        <span class="hub-stat">298 Points</span>
+                        <span class="arrow">→</span>
+                    </div>
                 </a>
             </div>
 
             <div class="back-link">
-                <a href="../../feed.html" class="btn-back">← Back to Directory</a>
+                <a href="../../index.html#directory" class="btn-back">← Back to Directory</a>
             </div>
         </div>
     </section>
