Add expandable directory UI to homepage

--- a/index.html
+++ b/index.html
@@ -118,83 +118,84 @@
             
             <div class="directory-grid">
                 <!-- Britain -->
-                <div class="directory-category">
+                <div class="directory-category" data-category="britain">
                     <div class="category-header">
                         <h3>🇬🇧 Britain</h3>
-                        <a href="regional/pages/britain-directory.html" class="view-all">View All →</a>
+                        <button class="expand-btn" aria-label="Expand Britain category">+</button>
                     </div>
-                    <div class="hub-links">
+                    <p class="category-desc">United Kingdom and constituent nations</p>
+                    <div class="hub-links collapsed">
                         <a href="regional/pages/britain-directory.html" class="hub-link">BritainWTF</a>
                         <a href="regional/pages/scotland.html" class="hub-link">ScotlandWTF</a>
-                        <a href="regional/pages/britain-directory.html" class="hub-link">EnglandWTF</a>
-                        <a href="regional/pages/britain-directory.html" class="hub-link">WalesWTF</a>
-                        <a href="regional/pages/britain-directory.html" class="hub-link">Northern Ireland WTF</a>
+                        <a href="#" class="hub-link">EnglandWTF</a>
+                        <a href="#" class="hub-link">WalesWTF</a>
+                        <a href="#" class="hub-link">Northern Ireland WTF</a>
                     </div>
                 </div>
 
                 <!-- Europe -->
-                <div class="directory-category">
+                <div class="directory-category" data-category="europe">
                     <div class="category-header">
                         <h3>🌍 Europe</h3>
-                        <a href="regional/pages/europe-directory.html" class="view-all">View All →</a>
+                        <button class="expand-btn" aria-label="Expand Europe category">+</button>
                     </div>
-                    <div class="hub-links">
-                        <a href="regional/pages/europe-directory.html" class="hub-link">EuropeWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">IrelandWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">FranceWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">GermanyWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">NetherlandsWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">PolandWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">ItalyWTF</a>
-                        <a href="regional/pages/europe-directory.html" class="hub-link">SwedenWTF</a>
+                    <p class="category-desc">Continental European nations</p>
+                    <div class="hub-links collapsed">
+                        <a href="#" class="hub-link">EuropeWTF</a>
+                        <a href="#" class="hub-link">IrelandWTF</a>
+                        <a href="#" class="hub-link">FranceWTF</a>
+                        <a href="#" class="hub-link">GermanyWTF</a>
+                        <a href="#" class="hub-link">NetherlandsWTF</a>
+                        <a href="#" class="hub-link">PolandWTF</a>
+                        <a href="#" class="hub-link">ItalyWTF</a>
+                        <a href="#" class="hub-link">SwedenWTF</a>
                     </div>
                 </div>
 
                 <!-- The West -->
-                <div class="directory-category">
+                <div class="directory-category" data-category="thewest">
                     <div class="category-header">
                         <h3>🌎 The West</h3>
-                        <a href="regional/pages/thewest-directory.html" class="view-all">View All →</a>
+                        <button class="expand-btn" aria-label="Expand The West category">+</button>
                     </div>
-                    <div class="hub-links">
-                        <a href="regional/pages/thewest-directory.html" class="hub-link">TheWestWTF</a>
-                        <a href="regional/pages/thewest-directory.html" class="hub-link">USAWTF</a>
-                        <a href="regional/pages/thewest-directory.html" class="hub-link">CanadaWTF</a>
-                        <a href="regional/pages/thewest-directory.html" class="hub-link">AustraliaWTF</a>
+                    <p class="category-desc">Western nations and democracies</p>
+                    <div class="hub-links collapsed">
+                        <a href="#" class="hub-link">TheWestWTF</a>
+                        <a href="#" class="hub-link">USAWTF</a>
+                        <a href="#" class="hub-link">CanadaWTF</a>
+                        <a href="#" class="hub-link">AustraliaWTF</a>
                     </div>
                 </div>
 
                 <!-- AI & Tech -->
-                <div class="directory-category ai-category">
+                <div class="directory-category ai-category" data-category="ai">
                     <div class="category-header">
                         <h3>🤖 AI & Tech</h3>
-                        <a href="regional/pages/ai-directory.html" class="view-all">View All →</a>
+                        <button class="expand-btn" aria-label="Expand AI category">+</button>
                     </div>
-                    <div class="hub-links">
+                    <p class="category-desc">Artificial intelligence and technology</p>
+                    <div class="hub-links collapsed">
                         <a href="ai.html" class="hub-link">AIWTF</a>
                         <a href="ai.html" class="hub-link">AITechWTF</a>
                     </div>
                 </div>
 
                 <!-- Global -->
-                <div class="directory-category">
+                <div class="directory-category" data-category="global">
                     <div class="category-header">
                         <h3>🌐 Global</h3>
-                        <a href="regional/pages/global-directory.html" class="view-all">View All →</a>
+                        <button class="expand-btn" aria-label="Expand Global category">+</button>
                     </div>
-                    <div class="hub-links">
+                    <p class="category-desc">Worldwide networks and special projects</p>
+                    <div class="hub-links collapsed">
                         <a href="index.html" class="hub-link">WatchTheFallWTF</a>
-                        <a href="regional/pages/global-directory.html" class="hub-link">GadgetsWTF</a>
-                        <a href="regional/pages/global-directory.html" class="hub-link">ComedyWTF</a>
-                        <a href="regional/pages/global-directory.html" class="hub-link">DarkHumourWTF</a>
-                        <a href="regional/pages/global-directory.html" class="hub-link">ConceptsWTF</a>
+                        <a href="#" class="hub-link">GadgetsWTF</a>
+                        <a href="#" class="hub-link">ComedyWTF</a>
+                        <a href="#" class="hub-link">DarkHumourWTF</a>
+                        <a href="#" class="hub-link">ConceptsWTF</a>
                         <a href="watchthefallrecords.html" class="hub-link">WTF Records</a>
                     </div>
                 </div>
-            </div>
-
-            <div class="section-cta">
-                <a href="feed.html" class="btn btn-secondary">Open Full Directory Page</a>
             </div>
         </div>
     </section>
@@ -234,6 +235,7 @@
     <script src="scripts/worldcup.js"></script>
     <script src="scripts/worldcup_display.js"></script>
     <script src="scripts/printify_sync.js"></script>
+    <script src="scripts/directory.js"></script>
     
     <!-- PWA Service Worker Registration -->
     <script>
