Fix footer Directory link to scroll to homepage section

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="watchthefallrecords.html">Shop</a></li>
-                        <li><a href="feed.html">Directory</a></li>
+                        <li><a href="#directory">Directory</a></li>
                     </ul>
                 </div>
                 <div class="footer-info">
