Add multi-platform content slider with 13 videos + 2 ad slots

--- a/index.html
+++ b/index.html
@@ -74,13 +74,20 @@
         </div>
     </section>
 
-    <!-- TikTok 5-Pack Section -->
-    <section id="content" class="section tiktok-section">
+    <!-- Multi-Platform Content Section -->
+    <section id="content" class="section content-section">
         <div class="container">
             <h2 class="section-title">Content</h2>
             <p class="section-subtitle">Latest viral content from the WatchTheFall network</p>
-            <div id="tiktok-grid" class="tiktok-slider slider">
-                <!-- TikTok embeds will be loaded here via tiktok_section.js -->
+            
+            <!-- Platform Toggle -->
+            <div id="platform-toggle" class="platform-toggle">
+                <!-- Platform buttons will be loaded here via tiktok_section.js -->
+            </div>
+            
+            <!-- Content Slider -->
+            <div id="content-slider" class="content-slider slider">
+                <!-- 15 boxes (13 videos + 2 ads) will be loaded here -->
             </div>
         </div>
     </section>
